--- a/app/src/main/res/layout/fragment_faq_choice.xml
+++ b/app/src/main/res/layout/fragment_faq_choice.xml
@@ -68,6 +68,7 @@
                     android:textColor="@color/mainTextColor" />
 
                 <FrameLayout
+                    android:id="@+id/cattrackerBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
