--- a/app/src/main/res/layout/fragment_trackers_map.xml
+++ b/app/src/main/res/layout/fragment_trackers_map.xml
@@ -729,6 +729,7 @@
                         android:layout_marginLeft="8dp"
                         android:layout_weight="1"
                         android:background="@drawable/button_gray"
+                        android:clickable="@{viewModel.clickableEditBtn}"
                         android:gravity="center"
                         android:text="@string/edit"
                         android:textColor="@color/white"
