--- a/app/src/main/res/layout/fragment_trackers_map.xml
+++ b/app/src/main/res/layout/fragment_trackers_map.xml
@@ -605,7 +605,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
                         android:layout_weight="1"
-                        android:background="@drawable/button_gray"
+                        android:background="@drawable/button_green"
                         android:clickable="@{viewModel.clickableEditBtn}"
                         android:gravity="center"
                         android:text="@string/edit"
