--- a/app/src/main/res/layout/fragment_edit_tracker.xml
+++ b/app/src/main/res/layout/fragment_edit_tracker.xml
@@ -531,13 +531,30 @@
                     android:layout_marginBottom="16dp"
                     android:text="@string/update" />
 
-                <TextView
-                    android:id="@+id/resetButton"
-                    style="@style/AppTheme.widget.Button.Green"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
-                    android:text="@string/reset" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/resetButton"
+                        style="@style/AppTheme.widget.Button.Green"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/reset" />
+
+                    <TextView
+                        android:id="@+id/shutDownBtn"
+                        style="@style/AppTheme.widget.Button.Green"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/shutdown"
+                        android:visibility="@{viewModel.isS1OrA9Tracker()}" />
+
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/pauseSubscriptionBtn"
