--- a/app/src/main/res/layout/fragment_faq_choice.xml
+++ b/app/src/main/res/layout/fragment_faq_choice.xml
@@ -64,11 +64,11 @@
                     android:gravity="center"
                     android:paddingBottom="12dp"
                     android:paddingTop="8dp"
-                    android:text="@string/gpsPingMarcelTracker"
+                    android:text="@string/gpsPingMarcel"
                     android:textColor="@color/mainTextColor" />
 
                 <FrameLayout
-                    android:id="@+id/cattrackerBtn"
+                    android:id="@+id/isabellaBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
@@ -91,7 +91,7 @@
                     android:gravity="center"
                     android:paddingBottom="12dp"
                     android:paddingTop="8dp"
-                    android:text="@string/gpsCatTracker"
+                    android:text="@string/gpsPingIsabella"
                     android:textColor="@color/mainTextColor" />
 
             </LinearLayout>
