--- a/app/src/main/res/layout/fragment_trackers_map.xml
+++ b/app/src/main/res/layout/fragment_trackers_map.xml
@@ -463,7 +463,7 @@
                             android:id="@+id/tvDistance"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@{viewModel.currentMapPoint.getAttributes != null ? @string/distanceInfo(viewModel.currentMapPoint.getAttributes.getDistanceStr) : null}"
+                            android:text="@{viewModel.currentMapPoint.getAttributes != null ? viewModel.currentMapPoint.getAttributes.getDistanceStr : null}"
                             android:textSize="18sp"
                             android:textStyle="bold"
                             tools:text="@string/distance_tools" />
@@ -487,7 +487,7 @@
                             android:id="@+id/tvDistanceTravelled"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@{viewModel.currentMapPoint.getAttributes != null ? @string/distanceTravelledInfo(viewModel.currentMapPoint.getAttributes.getTotalDistanceStr) : null}"
+                            android:text="@{viewModel.currentMapPoint.getAttributes != null ? viewModel.currentMapPoint.getAttributes.getTotalDistanceStr : null}"
                             android:textSize="18sp"
                             android:textStyle="bold"
                             tools:text="@string/distance_travelled_tools" />
