[chg] hide buy button in SettingsFragment

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -61,7 +61,8 @@
                     style="@style/AppTheme.widget.Button.Green"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="@dimen/button_margin_top"
-                    android:text="@string/buy" />
+                    android:text="@string/buy"
+                    android:visibility="gone" />
             </LinearLayout>
         </ScrollView>
 
