--- a/app/src/main/res/layout/fragment_trackers_map.xml
+++ b/app/src/main/res/layout/fragment_trackers_map.xml
@@ -25,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <no.appsonite.gpsping.widget.MapTargetView
+        <no.appsonite.gpsping.widget.targetView.MapTargetViewDraw
             android:id="@+id/mapTarget"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
